@@ -1,24 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX newrelic_rpm-2.10.8-no-webrick.patch 682 RMD160 3a7f7cc82c58b1786f64d89bebcaac1bbce27985 SHA1 88618f3d1941455b2d5639b5323ea62425ad3327 SHA256 626a62453edbc2f03f838f6d1cf08754ae0a680928600be5daa5f8e049c5bd6b
-AUX newrelic_rpm-2.12.3-less-stdout.patch 1314 RMD160 f3296bc55471a3989a996b12f5842c825ebbae78 SHA1 28ec60b282f7bb0aa446b7e26f92d22e0db79e43 SHA256 b1428b46d4cdac68d228cad8948862fc8d6f3ac0fa5a9f09e22ee33b14dcf130
-AUX newrelic_rpm-3.3.0-no-webrick.patch 699 RMD160 1b56c5e2ed3327c32a1d59ecc0b1890ba194d004 SHA1 7fa9b6da3917d4d081cee2e46636a66980d58309 SHA256 0414ab6fa48a2a2ccc2481a454d0fd88d91c2fc415887041f8d6ed8caf07b5f6
-DIST newrelic_rpm-3.1.0.gem 377856 RMD160 0ef6152d18686951b67912c22cdf8aa7d97cc955 SHA1 e65871432318eace9dee8d91c93c770dcb24fe75 SHA256 0eeb08244dc3ea7d4b59ca8d5f545665599062fa122920ec7ee26ccdc59ddd6a
-DIST newrelic_rpm-3.1.1.gem 391168 RMD160 83568bbb4672436068f56b13dd9862f268177203 SHA1 77de80c0a3e05cbb63ecd5e63a8e33f9faa0ebf1 SHA256 1efa379339e2d498c125a197deba4b4a7b91d020a15ed0f533ad74a3c7f338ee
-DIST newrelic_rpm-3.1.2.gem 393216 RMD160 ea5d29eaa0150a884852b08e08a419a0399813dc SHA1 7b2ac06c53165ca17bbfb5d71cbaff314f47068f SHA256 ca118e521febeb23ce2a411d79daa414ac2c557fe12b7266535cb1fe46eee8fe
 DIST newrelic_rpm-3.3.0.gem 405504 RMD160 dd98b5839ad1ac5e1e76f4bfadef171195942588 SHA1 5e2034f6bb44b7f8dee5ec01bf95bd384f6268ae SHA256 fffe325d00dfaff7f7160f4af44e64bcfaeddedc3842cbfdfdc2339207c29c35
-EBUILD newrelic_rpm-3.1.0.ebuild 768 RMD160 8a75acdaf352f77f77b69f6f0512649a7603a616 SHA1 934494efe4bee96f8ec8b4fdab0a331b07262d24 SHA256 30062e9a26aed1fd44e75aefe112d7aad048baab9a175566d5cc177c7e06edfd
-EBUILD newrelic_rpm-3.1.1.ebuild 768 RMD160 8a75acdaf352f77f77b69f6f0512649a7603a616 SHA1 934494efe4bee96f8ec8b4fdab0a331b07262d24 SHA256 30062e9a26aed1fd44e75aefe112d7aad048baab9a175566d5cc177c7e06edfd
-EBUILD newrelic_rpm-3.1.2.ebuild 768 RMD160 8a75acdaf352f77f77b69f6f0512649a7603a616 SHA1 934494efe4bee96f8ec8b4fdab0a331b07262d24 SHA256 30062e9a26aed1fd44e75aefe112d7aad048baab9a175566d5cc177c7e06edfd
-EBUILD newrelic_rpm-3.3.0-r1.ebuild 988 RMD160 ccdad7956864ecbf3968ffa5fc33edec9e25e531 SHA1 96a4e0ca8f62a6c02e6175f1817cbbbca8185a50 SHA256 9c989deb6910c8408d78217ebcfcb992a05d0a6a136bd4c93bbb3095bf9ece7e
-EBUILD newrelic_rpm-3.3.0.ebuild 767 RMD160 e989222df3aabca30a979836b787bfa78eef444c SHA1 6b9860a03a7f157a321df6105e06d9a401d072ad SHA256 b7aaecbede9e5d1688b605388896c513ff20395614faccdefe4d3bb4ebf17ca5
-MISC ChangeLog 3219 RMD160 c1f9a2c3ab07daad35a09ee3c4353f5d3f17f627 SHA1 ff8cf5b44c14a502cb5a8d70abd2ed5192c24fee SHA256 bcb3c2787faa00dc00ac47771cf4d91c8826e84105e1b971154f62b3ca57456c
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7bLEoACgkQiIP6VqMIqNcdkwD/bA6zCxX+off7yviv5U0JpkgU
-vxBnoJML63psqVN9kr0BAI9aQCJOH6/59J1F2TakhWrJ9qgIe0NSuT3Cq7TZANlX
-=lIGU
+iF0EAREIAAYFAk+ICXUACgkQiIP6VqMIqNcIVgD48E7/uKWnYM4PqGSZLJKE5/2Z
+wIEYKwOE4e5BPiN5uAEAiuMZ1uSJX+S4JH7dyvn7ybp5bMEQ+BBhYtT33Dy09cQ=
+=RL+L
 -----END PGP SIGNATURE-----
