@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/newrelic_rpm
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Apr 2012; Hans de Graaff <graaff@gentoo.org> -newrelic_rpm-3.1.0.ebuild,
+  -newrelic_rpm-3.1.1.ebuild, -newrelic_rpm-3.1.2.ebuild:
+  Remove old versions.
 
 *newrelic_rpm-3.3.0-r1 (04 Dec 2011)
 
